@@ -2,6 +2,10 @@ Revision history for Test::PDL
 
 {{$NEXT}}
 
+ - added a function eq_pdl() to compare two piddles, without performing an
+   actual test. If you've been wanting to compare two piddles outside of a test
+   suite, now you can (Edward Baudrez)
+
 0.03      2012-09-10
 
  - minor bugfixes related to distribution building and hosting on GitHub. No
